--- a/app/views/v7/employer/view-advert/view.html
+++ b/app/views/v7/employer/view-advert/view.html
@@ -1,7 +1,7 @@
 {% extends "ma-layout.html" %}
 
 {% block pageTitle %}
-Preview your vacancy - Recruitment - {{serviceName}} - GOV.UK
+View your advert - Recruitment - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent%}
