--- a/app/views/v7/provider/account-home.html
+++ b/app/views/v7/provider/account-home.html
@@ -114,7 +114,7 @@
 
 					<div class="govuk-grid-column-one-half">
 						<h2 class="govuk-heading-m">
-							<a href="{% if data.startpage == 1 %}../traineeships/create/start-page{% else %}../traineeships/dashboard{% endif %}" class="govuk-link govuk-link--no-visited-state">Recruit trainees</a>
+							<a href="../traineeships/view-vacancy/0-dashboard" class="govuk-link govuk-link--no-visited-state">Recruit trainees</a>
 						</h2>
 						<p>Create a traineeship vacancy and manage applications.</p>
 					</div>
