--- a/app/views/v7/traineeships/view-vacancy/view.html
+++ b/app/views/v7/traineeships/view-vacancy/view.html
@@ -1,4 +1,4 @@
-{% extends "tp-layout.html" %}
+{% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
 View your vacancy - Recruitment - {{serviceName}} - GOV.UK
