changed analytics vacancy to advert

--- a/app/views/v7/employer/view-advert/3b-manage-advert.html
+++ b/app/views/v7/employer/view-advert/3b-manage-advert.html
@@ -99,7 +99,7 @@ Manage advert
 <!-- ///ANALYTICS//// -->
 <div class="govuk-grid-row">
 <div class="govuk-grid-column-two-thirds">
-<h2 class="govuk-heading-l">Vacancy analytics
+<h2 class="govuk-heading-l">Advert analytics
   <span class="govuk-caption-l">Showing stats from 20th Jan 2019 to 19th Feb 2019</span>
 </h2>
 <p class="govuk-body">Analytics show the total amount and the change from the previous 7 days</p>
