--- a/app/views/v7/_summary.html
+++ b/app/views/v7/_summary.html
@@ -2,7 +2,7 @@
   <span class="govuk-tag">LATEST version</span><br>
   Design sprint 7
   <span class="govuk-caption-l">
-    May 2022 &ndash; Present
+    25 May 2022 &ndash; 7th June 2022
   </span>
 </h2>
 
@@ -57,7 +57,7 @@
         <!-- <a href="v7/provider/login?startpage=1" class="govuk-button" style="background: #F47737" data-module="govuk-button">Create a vacancy (new user)</a> -->
       </div>
 
-      <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Traineeship 'view advert' journey</h4>                                              
+      <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Traineeship 'view vacancy' journey</h4>                                              
       <div class="govuk-button-group">
         <a href="v7/provider/login" class="govuk-button" style="background: #417F82" data-module="govuk-button">View vacancy</a>
       </div>
