--- a/app/views/v7/employer/view-advert/2a-new-applications.html
+++ b/app/views/v7/employer/view-advert/2a-new-applications.html
@@ -143,12 +143,12 @@ Adverts
             <div class="form-group search-field search-field-darker">
               <div class="search-input search-input-with-button">
                 <label class="govuk-label" for="search">
-                  Search adverts
+                  Search by advert title, reference number or employer
                 </label>
 
                 <div class="autocomplete__parent_wrapper">
                   <div class="autocomplete__wrapper">
-                    <input aria-owns="searchClients__listbox" autocomplete="off" class="autocomplete__input" id="search" name="search" placeholder="Search by advert title, reference number or employer" role="combobox" type="text" value="{%if query.search %}{{query.search}}{%endif%}">
+                    <input aria-owns="searchClients__listbox" autocomplete="off" class="autocomplete__input" id="search" name="search" placeholder="" role="combobox" type="text" value="{%if query.search %}{{query.search}}{%endif%}">
                   </div>
                 </div>
 
