--- a/app/views/v7/provider/view-vacancy/1a-pending-employer-review.html
+++ b/app/views/v7/provider/view-vacancy/1a-pending-employer-review.html
@@ -151,12 +151,12 @@ Vacancies
             <div class="form-group search-field search-field-darker">
               <div class="search-input search-input-with-button">
                 <label class="govuk-label" for="search">
-                  Search vacancies
+                  SSearch by vacancy title, reference number or employer
                 </label>
 
                 <div class="autocomplete__parent_wrapper">
                   <div class="autocomplete__wrapper">
-                    <input aria-owns="searchClients__listbox" autocomplete="off" class="autocomplete__input" id="search" name="search" placeholder="Search by vacancy title, reference number or employer" role="combobox" type="text" value="{%if query.search %}{{query.search}}{%endif%}">
+                    <input aria-owns="searchClients__listbox" autocomplete="off" class="autocomplete__input" id="search" name="search" placeholder="" role="combobox" type="text" value="{%if query.search %}{{query.search}}{%endif%}">
                   </div>
                 </div>
 
