--- a/app/views/v7/provider/view-vacancy/5a-closed.html
+++ b/app/views/v7/provider/view-vacancy/5a-closed.html
@@ -173,7 +173,7 @@ Vacancies
 </div>
 <!-- SEARCH end -->
 
-  <p class="govuk-body"><b>1 vacancy with new applications</b> &nbsp;
+  <p class="govuk-body"><b>1 closed vacancy</b> &nbsp;
     <a href="#">Show all vacancies</a>
   </p>
 
