--- a/app/views/v8/provider/view-vacancy/1a-pending-employer-review.html
+++ b/app/views/v8/provider/view-vacancy/1a-pending-employer-review.html
@@ -151,7 +151,7 @@ Vacancies
             <div class="form-group search-field search-field-darker">
               <div class="search-input search-input-with-button">
                 <label class="govuk-label" for="search">
-                  SSearch by vacancy title, reference number or employer
+                  Search by vacancy title, reference number or employer
                 </label>
 
                 <div class="autocomplete__parent_wrapper">
@@ -173,7 +173,7 @@ Vacancies
 </div>
 <!-- SEARCH end -->
 
-  <p class="govuk-body"><b>2 vacancies pending ESFA review</b> &nbsp;
+  <p class="govuk-body"><b>2 vacancies pending employer review</b> &nbsp;
     <a href="#">Show all vacancies</a>
   </p>
 
