create vacancy button link fixed

--- a/app/views/v8/provider/view-vacancy/0-dashboard.html
+++ b/app/views/v8/provider/view-vacancy/0-dashboard.html
@@ -14,7 +14,7 @@ Recruitment - {{serviceName}} - GOV.UK
         <h1 class="govuk-heading-xl ">Recruitment</h1>
       </div>
       <div class="govuk-grid-column-one-third" style="text-align: right;">
-        <a href="create/start-page" class="govuk-button" data-module="govuk-button">Create vacancy</a>
+        <a href="../create/start-page" class="govuk-button" data-module="govuk-button">Create vacancy</a>
       </div>
       </div>
       <div class="govuk-grid-row govuk-!-margin-bottom-6">
