--- a/app/views/v8/traineeships/view-vacancy/0-dashboard.html
+++ b/app/views/v8/traineeships/view-vacancy/0-dashboard.html
@@ -13,8 +13,10 @@ Recruitment - {{serviceName}} - GOV.UK
         <!-- Heading -->
         <h1 class="govuk-heading-xl ">Your traineeship vacancies</h1>
       </div>
+
       <div class="govuk-grid-column-one-third" style="text-align: right;">
-        <a href="#" class="govuk-button" data-module="govuk-button">Create vacancy</a>
+        <!--<a href="create/create-vacancy" class="govuk-button" data-module="govuk-button">Create an advert</a>-->
+        <a href="../create/start-page" class="govuk-button" data-module="govuk-button">Create vacancy</a>
       </div>
       </div>
       <div class="govuk-grid-row govuk-!-margin-bottom-6">
