create advert link amended

--- a/app/views/v8/employer/create/check-your-answers.html
+++ b/app/views/v8/employer/create/check-your-answers.html
@@ -286,9 +286,7 @@ Training provider
           <input type="hidden" name="answers-checked" value="true">
 
           <div class="govuk-button-group">
-            <button class="govuk-button" data-module="govuk-button">
-              Submit advert
-            </button>
+            <a href="confirmation" class="govuk-button" data-module="govuk-button">Submit advert</a>
 
             <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
           </div>
