--- a/app/views/v8/traineeships/create/check-your-answers.html
+++ b/app/views/v8/traineeships/create/check-your-answers.html
@@ -325,9 +325,8 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
           <input type="hidden" name="answers-checked" value="true">
 
           <div class="govuk-button-group">
-            <button class="govuk-button" data-module="govuk-button">
-              Submit vacancy
-            </button>
+            <a href="confirmation" class="govuk-button" data-module="govuk-button">Submit vacancy</a>
+
 
             <a href="../dashboard" class="govuk-link" href="#">Cancel</a>
           </div>
