--- a/app/views/v8/traineeships/create/preview-vacancy.html
+++ b/app/views/v8/traineeships/create/preview-vacancy.html
@@ -237,9 +237,14 @@ Preview your vacancy - Recruitment - {{serviceName}} - GOV.UK
         <div class="govuk-button-group">
           <input type="hidden" name="answers-checked" value="true">
           
-          <button class="govuk-button" data-module="govuk-button">
-            Submit vacancy
-          </button>
+
+         
+            <a href="confirmation" class="govuk-button" data-module="govuk-button">Submit vacancy</a>
+        
+
+          <!-- <button class="govuk-button" data-module="govuk-button">
+            
+          </button> -->
 
           <a href="check-your-answers" class="govuk-button govuk-button--secondary">Change your answers</a>
         </div>
