--- a/app/views/v8/employer/create/advert-preview.html
+++ b/app/views/v8/employer/create/advert-preview.html
@@ -231,9 +231,8 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
         <div class="govuk-button-group">
           <input type="hidden" name="answers-checked" value="true">
           
-          <button class="govuk-button" data-module="govuk-button">
-            Submit advert
-          </button>
+          <a href="confirmation" class="govuk-button" data-module="govuk-button">Submit advert</a>
+
 
           <a href="check-your-answers" class="govuk-button govuk-button--secondary">Change your advert</a>
         </div>
