--- a/app/views/v8/employer/view-advert/1a-pending-review.html
+++ b/app/views/v8/employer/view-advert/1a-pending-review.html
@@ -104,7 +104,7 @@ Adverts
   </div>
   <div class="govuk-grid-column-one-third" style="text-align:right;">
 
-      <p class="govuk-body govuk-!-margin-bottom-0"><a href="#" class="govuk-button govuk-!-margin-bottom-2">Create an advert</a></p>
+      <p class="govuk-body govuk-!-margin-bottom-0"><a href="../create/start-page" class="govuk-button govuk-!-margin-bottom-2">Create an advert</a></p>
 
   </div>
 </div>
