--- a/app/views/v8/traineeships/view-vacancy/5a-closed.html
+++ b/app/views/v8/traineeships/view-vacancy/5a-closed.html
@@ -104,7 +104,7 @@ Vacancies
   </div>
   <div class="govuk-grid-column-one-third" style="text-align:right;">
 
-      <p class="govuk-body govuk-!-margin-bottom-0"><a href="#" class="govuk-button govuk-!-margin-bottom-2">Create vacancy</a></p>
+      <p class="govuk-body govuk-!-margin-bottom-0"><a href="../create/start-page" class="govuk-button govuk-!-margin-bottom-2">Create vacancy</a></p>
 
   </div>
 </div>
