employer create an advert content amendments

--- a/app/views/v8/employer/create/dates.html
+++ b/app/views/v8/employer/create/dates.html
@@ -136,7 +136,7 @@ Important dates - Your apprenticeship adverts - {{serviceName}} - GOV.UK
       </div>
 
 
-      <div class="govuk-form-group">
+      <!-- <div class="govuk-form-group">
         <fieldset class="govuk-fieldset" aria-describedby="nationality-hint">
           <legend class="govuk-label govuk-label--m" for="shortDescription">
             Disability Confident employer (optional) 
@@ -154,7 +154,7 @@ Important dates - Your apprenticeship adverts - {{serviceName}} - GOV.UK
             </div>
           </div>
         </fieldset>
-      </div>
+      </div> -->
       
       <div class="govuk-button-group">
         <button class="govuk-button" data-module="govuk-button">
