--- a/app/views/v8/employer/create/long-description.html
+++ b/app/views/v8/employer/create/long-description.html
@@ -40,7 +40,7 @@ Description of the vacancy - Your apprenticeship adverts - {{serviceName}} - GOV
     {% endif%}
 
     <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
-    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">About the apprenticeship 
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Tasks and training details
     </h1>
     <form method="post">
       <fieldset class="govuk-fieldset">
@@ -68,9 +68,9 @@ Description of the vacancy - Your apprenticeship adverts - {{serviceName}} - GOV
             <label class="govuk-label govuk-label--m" for="TrainingQualification">
               What training will the apprentice take and what qualification will the apprentice get at the end?
             </label>
-            <p class="govuk-body">You must include information about the following:</p>
+            <p class="govuk-body">You must include information about:</p>
             <ul class="govuk-list govuk-list--bullet">
-              <li>the qualification they'll get at the end &ndash; you can <a href="https://www.gov.uk/what-different-qualification-levels-mean/list-of-qualification-levels" class="govuk-link">view the types of qualifications available (opens in new tab or window)</a></li>
+              <li>the qualification they'll get at the end &ndash; you can <a href="https://www.gov.uk/what-different-qualification-levels-mean/list-of-qualification-levels" class="govuk-link">view the types of qualifications available (opens in new tab)</a></li>
               <li>where and when the apprentice will do their training &ndash; if you can, add details about the location of the training</li>
               <li>whether the training will be one day a week or block release</li>
             </ul>
@@ -86,7 +86,7 @@ Description of the vacancy - Your apprenticeship adverts - {{serviceName}} - GOV
           </div>
 
         </div>
-        <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="500">
+        <!-- <div class="govuk-character-count" data-module="character-count" data-minlength="50" data-maxlength="500">
           <div class="govuk-form-group {% if 'OutcomeDescription' in data.errorType %}govuk-form-group--error{% endif%}">
             <label class="govuk-label govuk-label--m" for="OutcomeDescription">
               What is the expected career progression after this apprenticeship?
@@ -103,7 +103,7 @@ Description of the vacancy - Your apprenticeship adverts - {{serviceName}} - GOV
             <textarea class="govuk-textarea js-character-count {% if 'OutcomeDescription' in data.errorType %}govuk-textarea--error{% endif %}" id="OutcomeDescription" name="OutcomeDescription" rows="9" aria-describedby="more-detail-hint">{% if data['OutcomeDescription'] %}{{data['OutcomeDescription']}}{% else %}{% endif %}</textarea>
           </div>
   
-        </div>
+        </div> -->
         <div class="govuk-button-group">
           <button class="govuk-button" data-module="govuk-button">
             Save and continue
