--- a/app/views/v8/employer/create/check-your-answers.html
+++ b/app/views/v8/employer/create/check-your-answers.html
@@ -47,6 +47,19 @@ Check your answers before submitting your advert - Your apprenticeship adverts -
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
+              Name of employer
+            </dt>
+            <dd class="govuk-summary-list__value">
+              [[selected employer]]
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> employer</span>
+              </a>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
               Training course
             </dt>
             <dd class="govuk-summary-list__value">
@@ -86,9 +99,17 @@ Training provider
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              About the apprenticeship
+              What will the apprentice be doing?
+              <br>
+              <br>
+              Training and qualification levels
             </dt>
             <dd class="govuk-summary-list__value">
+              [[your description]]
+              <br>
+              <br>
+              <br>
+              <br>
               [[your description]]
             </dd>
             <dd class="govuk-summary-list__actions">
@@ -104,7 +125,7 @@ Training provider
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Important dates
+              Application closing date
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected dates]]
@@ -115,31 +136,62 @@ Training provider
               </a>
             </dd>
           </div>
-    
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Duration and working hours
+              Apprenticeship start date
             </dt>
             <dd class="govuk-summary-list__value">
-              [[selected hours]]
+              [[selected dates]]
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> selected hours</span>
+                Change<span class="govuk-visually-hidden"> selected dates</span>
               </a>
             </dd>
           </div>
-
-           <div class="govuk-summary-list__row">
+          <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Pay rate
+              <br>
+              <br>
+              Extra information about pay (optional)
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected pay]]
+              <br>
+              <br>
+              [[your description]]
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
-                Change<span class="govuk-visually-hidden"> pay</span>
+                Change<span class="govuk-visually-hidden"> description</span>
+              </a>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Duration
+              <br>
+              <br>
+              Working week details
+              <br>
+              <br>
+              Hours a week
+            </dt>
+            <dd class="govuk-summary-list__value">
+              [[selected months or years]]
+              <br>
+              <br>
+              [[your description]]
+              <br>
+              <br>
+              <br>
+              [[selected number]]
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> description</span>
               </a>
             </dd>
           </div>
@@ -174,6 +226,8 @@ Training provider
           </div>
         </dl>
 
+<!-- ////SECTION 3//// -->
+
         <h2 class="govuk-heading-m">Skills and qualifications</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
@@ -192,7 +246,7 @@ Training provider
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Qualifications
+              Qualifications required
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected qualifications]]
@@ -200,6 +254,19 @@ Training provider
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
                 Change<span class="govuk-visually-hidden"> selected qualifications</span>
+              </a>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Future prospects
+            </dt>
+            <dd class="govuk-summary-list__value">
+              [[your description]]
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> future prospects</span>
               </a>
             </dd>
           </div>
@@ -218,6 +285,8 @@ Training provider
           </div>          
         </dl>
 
+        <!-- ////SECTION 4//// -->
+
         <h2 class="govuk-heading-m">About the employer</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
@@ -234,12 +303,33 @@ Training provider
               </a>
             </dd>
           </div>
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Employer Information
+              Employer information
+              <br>
+              <br>
+              Organisation website
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected information]]
+              <br>
+              <br>
+              [[your description]]
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> employer information</span>
+              </a>
+            </dd>
+          </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Disability Confident Employer?
+            </dt>
+            <dd class="govuk-summary-list__value">
+              [[your description]]
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
@@ -262,10 +352,16 @@ Training provider
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Website for application
+              Application website
+              <br>
+              <br>
+              Application process
             </dt>
             <dd class="govuk-summary-list__value">
               [[selected answer]]
+              <br>
+              <br>
+              [[your description]]
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
