--- a/app/views/v8/employer/create/dates.html
+++ b/app/views/v8/employer/create/dates.html
@@ -1,7 +1,7 @@
 {% extends "ma-layout.html" %}
 
 {% block pageTitle %}
-Important dates - Your apprenticeship adverts - {{serviceName}} - GOV.UK
+Closing and start date  - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
@@ -28,7 +28,7 @@ Important dates - Your apprenticeship adverts - {{serviceName}} - GOV.UK
     </div>
     {% endif %}
     <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
-    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Important dates</h1>
+    <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Closing and start date</h1>
     <!-- {% if data.expiryDate %}
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
