--- a/app/views/v8/employer/create/long-description.html
+++ b/app/views/v8/employer/create/long-description.html
@@ -1,7 +1,7 @@
 {% extends "ma-layout.html" %}
 
 {% block pageTitle %}
-Description of the vacancy - Your apprenticeship adverts - {{serviceName}} - GOV.UK
+Tasks and training details - Your apprenticeship adverts - {{serviceName}} - GOV.UK
 {% endblock %}
 
 {% block beforeContent %}
