--- a/app/views/v8/employer/create/qualifications-list.html
+++ b/app/views/v8/employer/create/qualifications-list.html
@@ -50,7 +50,7 @@ Qualifications - Your apprenticeship advert - {{serviceName}} - GOV.UK
     <form method="post">
 
       <div class="govuk-button-group govuk-!-margin-top-7">
-        <a href="things-to-consider" class="govuk-button">Save and continue</a>
+        <a href="future-prospects" class="govuk-button">Save and continue</a>
 
         <a href="qualifications" class="govuk-link" href="#">Cancel</a>
       </div>
