--- a/app/views/v8/employer/create/task-list.html
+++ b/app/views/v8/employer/create/task-list.html
@@ -404,10 +404,10 @@ Create an apprenticeship advert - Your apprenticeship adverts - {{serviceName}} 
             <span class="app-task-list__task-name">
               {% if data.section4 == "completed" %}
               <a href="application-process?return_url=task-list" aria-describedby="list-convictions-status">
-               Website for application 
+               Website for applications 
               </a>
               {%else%}
-              Website for application 
+              Website for applications 
               {%endif%}
             </span>
             <!--{% if data.port_entry or data.port_export or data.transport_method %}
