close vacancy banners

--- a/app/views/v8/employer/create/about-employer.html
+++ b/app/views/v8/employer/create/about-employer.html
@@ -20,7 +20,7 @@ Employer information - Your apprenticeship adverts - {{serviceName}} - GOV.UK
     <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
         <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">Information about {{data.orgName}}</h1>
     {% if data.EmployerDescription and data.journey != 'new' %}
-    <p class="govuk-body">Updating the employer information will also update the employer information on any unapproved vacancies eg. draft, pending review or rejected vacancies.</p>
+    <p class="govuk-body">Updating the employer information will also update the employer information on any unapproved adverts eg. draft, pending review or rejected adverts.</p>
     {%else%}
     <p class="govuk-body">You can add information about your organiasation. This information will be saved and automatically applied for any new vacancy for this organisation.</p>
     {%endif%}
