--- a/app/views/v8/employer/create/check-your-answers.html
+++ b/app/views/v8/employer/create/check-your-answers.html
@@ -326,7 +326,7 @@ Training provider
 
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Disability Confident Employer?
+              Disability Confident employer?
             </dt>
             <dd class="govuk-summary-list__value">
               [[your description]]
