banner content width updated

--- a/app/views/v8/employer/view-advert/3b-manage-advert-closed.html
+++ b/app/views/v8/employer/view-advert/3b-manage-advert-closed.html
@@ -11,6 +11,13 @@ Manage advert
 {% endblock %}
 
 {% block content %}
+
+<style>
+  .govuk-notification-banner__content > * {
+    box-sizing: border-box;
+   max-width: 100%; }
+</style>
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
 
