--- a/app/views/v8/traineeships/view-vacancy/3b-manage-vacancy-closed.html
+++ b/app/views/v8/traineeships/view-vacancy/3b-manage-vacancy-closed.html
@@ -1,3 +1,6 @@
+
+
+
 {% extends "trainee-layout.html" %}
 
 {% block pageTitle %}
@@ -11,6 +14,15 @@ Manage vacancy
 {% endblock %}
 
 {% block content %}
+
+<style>
+  .govuk-notification-banner__content > * {
+    box-sizing: border-box;
+   max-width: 100%; }
+</style>
+
+
+
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
 
